main/default/objects/CCPM_Missing_Timesheet__c/CCPM_Missing_Timesheet__c.object-meta.xml
<CustomObject>
    <label>CPM Missing Timesheet</label>
    <nameField>
        <label>Missing Timesheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPM Missing Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>