main/default/objects/CCPM_Missing_Timesheet__c/fields/Daily__c.field-meta.xml
<CustomField>
    <fullName>Daily__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if Daily missing timesheet, False if Weekly missing timesheet</inlineHelpText>
    <label>Daily</label>
    <type>Checkbox</type>
</CustomField>