main/default/objects/CCPM_Missing_Timesheet__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours Entered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>