main/default/objects/CCPM_Missing_Timesheet__c/fields/Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Project_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Resource</label>
    <referenceTo>Krow__Project_Resources__c</referenceTo>
    <relationshipName>Missing_Daily_Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>