main/default/objects/CCPM_Missing_Timesheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project_Resource__c</columns>
    <columns>Daily__c</columns>
    <columns>Date__c</columns>
    <columns>Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>